--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "license": "ISC",
   "scripts": {
     "start": "node dist/server/server.js",
+    "build.all": "gulp build",
+    "build.client": "gulp build.client",
+    "build.server": "gulp build.server",
     "postinstall": "typings install"
   },
   "dependencies": {
