--- a/package.json
+++ b/package.json
@@ -2,49 +2,49 @@
   "name": "ng2-template",
   "version": "0.1.0",
   "description": "A small lightweight Angular2 server/client template",
-  "main": "index.js",
+  "main": "main.js",
   "keywords": [],
   "author": "Christian Schrödel",
   "license": "ISC",
   "scripts": {
-    "start": "node dist/server/server.js",
-    "clean": "gulp clean",
-    "build.all": "gulp build.dev",
-    "build.client": "gulp build.client",
-    "build.server": "gulp build.server",
-    "serve.dev": "gulp serve.dev",
-    "postinstall": "cd ./src/client && typings install && cd ../server && typings install"
+    "start": "webpack-dev-server --inline --progress --port 8080",
+    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
+    "build.dev": "rimraf dist && webpack --config config/webpack.dev.js --progress --profile --bail",
+    "postinstall": "typings install"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/forms": "0.3.0",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.2",
-    "@angular/upgrade": "2.0.0-rc.5",
-    "core-js": "^2.4.0",
-    "es6-shim": "^0.35.1",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/router": "3.0.0",
+    "core-js": "^2.4.1",
     "express": "^4.14.0",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.27",
-    "zone.js": "^0.6.12"
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "connect-livereload": "^0.5.4",
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-tslint": "^6.1.1",
-    "gulp-typescript": "^2.13.6",
-    "run-sequence": "^1.2.2",
-    "tiny-lr": "^0.2.1",
-    "tslint": "^3.15.1"
+    "angular2-template-loader": "^0.4.0",
+    "awesome-typescript-loader": "^2.2.4",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.15.0",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
+    "html-loader": "^0.4.3",
+    "null-loader": "^0.1.1",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.13.1",
+    "sass-loader": "^4.0.0",
+    "ts-loader": "^0.8.1",
+    "node-sass": "^3.8.0",
+    "rimraf": "^2.5.2",
+    "typescript": "^2.0.2",
+    "typings": "^1.3.2",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.14.0"
   }
 }
