--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ng2-template",
   "version": "0.2.0",
   "description": "A small lightweight Angular2 server/client template",
-  "main": "main.js",
+  "main": "server.js",
   "keywords": [],
   "author": "Christian Schrödel",
   "license": "ISC",
