--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "webpack-dev-server --inline --progress --port 8080",
     "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
     "build.dev": "rimraf dist && webpack --config config/webpack.dev.js --progress --profile --bail",
+    "test": "karma start",
     "postinstall": "typings install"
   },
   "dependencies": {
@@ -29,18 +30,26 @@
   "devDependencies": {
     "angular2-template-loader": "^0.4.0",
     "awesome-typescript-loader": "^2.2.4",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "html-webpack-plugin": "^2.15.0",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
-    "null-loader": "^0.1.1",
-    "raw-loader": "^0.5.1",
-    "style-loader": "^0.13.1",
-    "sass-loader": "^4.0.0",
-    "ts-loader": "^0.8.1",
+    "html-webpack-plugin": "^2.15.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^1.2.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-mocha-reporter": "^2.2.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
     "node-sass": "^3.8.0",
+    "null-loader": "^0.1.1",
+    "phantomjs-prebuilt": "^2.1.7",
+    "raw-loader": "^0.5.1",
     "rimraf": "^2.5.2",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^0.8.1",
     "typescript": "^2.0.2",
     "typings": "^1.3.2",
     "webpack": "^1.13.0",
